# rrpm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: template.md
docs/: Completions.md  Introduction.md  Managing Remote Repositories.md  Managing and Creating Projects.md  The config.toml file.md  Viewing and Regenerating the Config.md
docs/Extensions/: Errors.md  Overview.md  The API.md
pm/: config.py  pm.py  utils.py
rrpm/: __main__.py  config.py  rrpm.py  utils.py
rrpm/ext/: loader.py
rrpm/presets/: __init__.py  js.py  py.py  ts.py
rrpm/presets/base/: base.py  managers.py
rrpm/presets/js/: __init__.py  nextjs.py  node.py  react.py
rrpm/presets/py/: __init__.py  pip.py  poetry.py  venv.py
rrpm/presets/ts/: nextjs.py  node.py  react.py
tests/: test_pm.py  test_rrpm.py
