[tool.poetry]
name = "rrpm"
version = "1.0.0"
description = "A tool to manage all your projects easily!"
readme = "README.md"
homepage = "https://github.com/pybash1/rrpm"
authors = ["pybash1 <example@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
typer = "^0.4.1"
toml = "^0.10.2"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
pm = 'rrpm.rrpm:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
