[tool.poetry]
name = "rrpm"
version = "1.3.0"
description = "A tool to manage all your projects easily!"
readme = "README.md"
homepage = "https://pybash.gitbook.io/rrpm"
documentation = "https://pybash.gitbook.io/rrpm"
repository = "https://github.com/pybash1/rrpm"
keywords = ["repository", "git", "javascript", "projects"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Terminals"
]
authors = ["pybash1 <example@example.com>"]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rrpm-org/rrpm/issues"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.4.4"
typer = "^0.4.1"
toml = "^0.10.2"
questionary = "^1.10.0"
rrpmpkg = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[tool.poetry.scripts]
rrpm = 'rrpm.rrpm:cli'


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "v$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
